crates/dsl-core/tests/snapshots/dag_golden__dag_comment_then_verb.snap
---
source: crates/dsl-core/tests/dag_golden.rs
expression: compiled
---
CompiledSteps {
    steps: [
        CompileStep {
            verb_call: VerbCall {
                domain: "cbu",
                verb: "create",
                arguments: [
                    Argument {
                        key: "name",
                        value: Literal(
                            String(
                                "Allianz GI LU",
                            ),
                            Span {
                                start: 76,
                                end: 91,
                            },
                        ),
                        span: Span {
                            start: 70,
                            end: 91,
                        },
                    },
                    Argument {
                        key: "jurisdiction",
                        value: Literal(
                            String(
                                "LU",
                            ),
                            Span {
                                start: 106,
                                end: 110,
                            },
                        ),
                        span: Span {
                            start: 92,
                            end: 110,
                        },
                    },
                ],
                lens_override: None,
                binding: Some(
                    "cbu",
                ),
                span: Span {
                    start: 58,
                    end: 120,
                },
            },
            source_stmt: 1,
        },
    ],
    errors: [],
}
