crates/dsl-core/tests/snapshots/dag_golden__dag_create_entity_assign_to_cbu.snap
---
source: crates/dsl-core/tests/dag_golden.rs
expression: compiled
---
CompiledSteps {
    steps: [
        CompileStep {
            verb_call: VerbCall {
                domain: "entity",
                verb: "create",
                arguments: [
                    Argument {
                        key: "entity-type",
                        value: Literal(
                            String(
                                "company",
                            ),
                            Span {
                                start: 37,
                                end: 46,
                            },
                        ),
                        span: Span {
                            start: 24,
                            end: 46,
                        },
                    },
                    Argument {
                        key: "name",
                        value: Literal(
                            String(
                                "Apex Capital Ltd",
                            ),
                            Span {
                                start: 53,
                                end: 71,
                            },
                        ),
                        span: Span {
                            start: 47,
                            end: 71,
                        },
                    },
                ],
                lens_override: None,
                binding: Some(
                    "entity",
                ),
                span: Span {
                    start: 9,
                    end: 84,
                },
            },
            source_stmt: 0,
        },
        CompileStep {
            verb_call: VerbCall {
                domain: "cbu",
                verb: "assign-role",
                arguments: [
                    Argument {
                        key: "cbu-id",
                        value: SymbolRef {
                            name: "cbu",
                            span: Span {
                                start: 118,
                                end: 122,
                            },
                        },
                        span: Span {
                            start: 110,
                            end: 122,
                        },
                    },
                    Argument {
                        key: "entity-id",
                        value: SymbolRef {
                            name: "entity",
                            span: Span {
                                start: 134,
                                end: 141,
                            },
                        },
                        span: Span {
                            start: 123,
                            end: 141,
                        },
                    },
                    Argument {
                        key: "role",
                        value: Literal(
                            String(
                                "DIRECTOR",
                            ),
                            Span {
                                start: 148,
                                end: 158,
                            },
                        ),
                        span: Span {
                            start: 142,
                            end: 158,
                        },
                    },
                ],
                lens_override: None,
                binding: None,
                span: Span {
                    start: 93,
                    end: 159,
                },
            },
            source_stmt: 1,
        },
    ],
    errors: [],
}
